# TabCAN

./: LICENSE  README.md  pyproject.toml
scripts/: benchmark_census.py  benchmark_tabarena.py  download_t4.py  pretrain_t4.py
src/tabcan/: __init__.py  dataset.py  interface.py  model.py  t4_dataset.py  table_registry.py  text_embedder.py  trainer.py  vocab_embedder.py
